--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "axios": "^1.7.9",
     "react": "18.3.1",
     "react-native": "0.76.5",
-    "react-native-responsive-fontsize": "^0.5.1"
+    "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "^2.22.0",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-svg": "^15.11.1",
+    "react-native-wheel-of-fortune": "^1.5.4",
+    "react-wheel-of-prizes": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
